--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;
               <a href="https://twitter.com/edu_kibret"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
+              <a href="https://github.com/ed87/"
+              ><i class="fa-brands fa-github"></i>
             </div>
             <button type="button">
               <a href="about.html">More About Me</a>
