--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,7 @@ ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;
             <textarea name="body" placeholder="message *" required></textarea>
           </div>
 
-          <button onclick="location.href='mailto:em@i.l';" value="Send" class="button button-block"
-            style="color: rgb(68, 59, 59);">Send</button>
+          <button type="submit" value="Send" class="button button-block" style="color: rgb(68, 59, 59);">Send</button>
 
         </form>
 
